--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,13 +8,32 @@
 
 <ion-content padding class="login-content">
     <div class="mask">
-        <div class="login-form">
-            <h1>Login</h1>
-            <div class="list-match">
-
-            </div>
-        </div>
-
     </div>
+    <div class="logo-log">
+        <img src="./assets/images/icons/log-logo.png" alt="">
+    </div>
+    <div class="login-form">
+        <h1>Login</h1>
+        <div class="form">
+            <!-- <div class="usr-name">
+                <ion-icon class="usr-icon" ios="ios-person" md="md-person"></ion-icon>
+            </div> -->
+            <ion-list>
+                <ion-item>
+                    <ion-label floating>Username</ion-label>
+                    <ion-input type="text" value=""></ion-input>
+                </ion-item>
+
+                <ion-item>
+                    <ion-label floating>Password</ion-label>
+                    <ion-input type="password"></ion-input>
+                </ion-item>
+
+            </ion-list>
+
+
+        </div>
+    </div>
+
 
 </ion-content>
