--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,25 +13,25 @@
         <img src="./assets/images/icons/log-logo.png" alt="">
     </div>
     <div class="login-form">
-        <h1>Login</h1>
+        <h1>Sign In</h1>
         <div class="form">
-            <!-- <div class="usr-name">
-                <ion-icon class="usr-icon" ios="ios-person" md="md-person"></ion-icon>
-            </div> -->
-            <ion-list>
+            <ion-list class="list-form">
                 <ion-item>
-                    <ion-label floating>Username</ion-label>
-                    <ion-input type="text" value=""></ion-input>
+                    <ion-label fixed>Username:</ion-label>
+                    <ion-input type="text" value="" maxlength="16"></ion-input>
                 </ion-item>
-
                 <ion-item>
-                    <ion-label floating>Password</ion-label>
+                    <ion-label fixed>Password:</ion-label>
                     <ion-input type="password"></ion-input>
                 </ion-item>
-
             </ion-list>
-
-
+            <div class="btn-log">
+                <button ion-button>Submit</button>
+            </div>
+            <div class="register-side">
+                <p>Don't have an account?</p>
+                <p>Register</p>
+            </div>
         </div>
     </div>
 
