update css for login

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,10 +10,27 @@
 <ion-content padding class="home-content">
     <div class="ava-side">
         <div class="avatar">
+            <!-- Male: Boy -->
             <img src="./assets/icon/boy.png" alt="">
+            <!-- Male: Girl -->
+            <!-- <img src="./assets/icon/girl.png" alt=""> -->
         </div>
     </div>
     <div class="full-name">
+        <!-- Full Name -->
         <h3>Sang Diep</h3>
+    </div>
+    <div class="point-info">
+        <!-- Current Point -->
+        <div class="current-point">
+            <h5>Current Point</h5>
+            <h3>10000</h3>
+        </div>
+        <!-- Total Matches Bet -->
+        <div class="total-bet">
+
+        </div>
+        <!-- Winning Ratio -->
+        <div class="win-ratio"></div>
     </div>
 </ion-content>
