update scss for profile screen

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,14 +23,18 @@
     <div class="point-info">
         <!-- Current Point -->
         <div class="current-point">
-            <h5>Current Point</h5>
-            <h3>10000</h3>
+            <div class="title-p">Current Point</div>
+            <div class="number-p">10,000</div>
         </div>
         <!-- Total Matches Bet -->
         <div class="total-bet">
-
+            <div class="title-p">Total Matches</div>
+            <div class="number-p">5</div>
         </div>
         <!-- Winning Ratio -->
-        <div class="win-ratio"></div>
+        <div class="win-ratio">
+            <div class="title-p">Winning Ratio</div>
+            <div class="number-p">63.5%</div>
+        </div>
     </div>
 </ion-content>
