--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -18,7 +18,7 @@
     </div>
     <div class="full-name">
         <!-- Full Name -->
-        <h3>Sang Diep</h3>
+        <h3>sang diep</h3>
     </div>
     <div class="point-info">
         <!-- Current Point -->
@@ -35,6 +35,27 @@
         <div class="win-ratio">
             <div class="title-p">Winning Ratio</div>
             <div class="number-p">63.5%</div>
+        </div>
+    </div>
+    <div class="mask">
+    </div>
+    <div class="details-side">
+        <h5>More Details</h5>
+        <div class="detail-info">
+            <div class="left">
+                <p>Full Name:</p>
+                <p>Favorite Team:</p>
+                <p>Total Win:</p>
+                <p>Total Lose:</p>
+                <p>Average Point Bet:</p>
+            </div>
+            <div class="right">
+                <p class="upper-name">Diep Ngoc Sang</p>
+                <p>Argentina</p>
+                <p>3</p>
+                <p>2</p>
+                <p>10,000</p>
+            </div>
         </div>
     </div>
 </ion-content>
