--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,32 +9,33 @@
 
 <ion-content padding class="home-content">
     <div class="ava-side">
+
         <div class="avatar">
             <!-- Male: Boy -->
-            <img src="./assets/icon/boy.png" alt="">
+            <img *ngIf="info.gender" src="./assets/icon/boy.png" alt="">
             <!-- Male: Girl -->
-            <!-- <img src="./assets/icon/girl.png" alt=""> -->
+            <img *ngIf="!info.gender" src="./assets/icon/girl.png" alt="">
         </div>
     </div>
     <div class="full-name">
-        <!-- Full Name -->
-        <h3>sang diep</h3>
+        <!-- Title Name -->
+        <h3>{{titleName}} </h3>
     </div>
     <div class="point-info">
         <!-- Current Point -->
         <div class="current-point">
             <div class="title-p">Current Point</div>
-            <div class="number-p">10,000</div>
+            <div class="number-p">{{info.currentpoint}}</div>
         </div>
         <!-- Total Matches Bet -->
         <div class="total-bet">
             <div class="title-p">Total Matches</div>
-            <div class="number-p">5</div>
+            <div class="number-p">{{info.totalmatch}}</div>
         </div>
         <!-- Winning Ratio -->
         <div class="win-ratio">
             <div class="title-p">Winning Ratio</div>
-            <div class="number-p">63.5%</div>
+            <div class="number-p">{{winRate | number}}%</div>
         </div>
     </div>
     <div class="mask">
@@ -50,11 +51,11 @@
                 <p>Average Point Bet:</p>
             </div>
             <div class="right">
-                <p class="upper-name">Diep Ngoc Sang</p>
-                <p>Argentina</p>
-                <p>3</p>
-                <p>2</p>
-                <p>10,000</p>
+                <p class="upper-name">{{fullName}}</p>
+                <p>{{info.favorite}}</p>
+                <p>{{info.totalwin}}</p>
+                <p>{{totalLose}}</p>
+                <p>{{info.averagepoint}}</p>
             </div>
         </div>
     </div>
