--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,9 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title class="head-title">
-            <img src="./assets/icon/title-img.png">
-        </ion-title>
+        <ion-title class="head-title">Home</ion-title>
     </ion-navbar>
 </ion-header>
 
