--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -19,7 +19,7 @@
     </div>
     <div class="full-name">
         <!-- Title Name -->
-        <h3>{{titleName}} </h3>
+        <h3>{{titleName}}</h3>
     </div>
     <div class="point-info">
         <!-- Current Point -->
@@ -34,7 +34,7 @@
         </div>
         <!-- Winning Ratio -->
         <div class="win-ratio">
-            <div class="title-p">Winning Ratio</div>
+            <div class="title-p">Win Rate</div>
             <div class="number-p">{{winRate | number}}%</div>
         </div>
     </div>
