--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -30,7 +30,7 @@
         <!-- Total Matches Bet -->
         <div class="total-bet">
             <div class="title-p">Total Matches</div>
-            <div class="number-p">{{info.totalmatch}}</div>
+            <div class="number-p text-center">{{info.totalmatch}}</div>
         </div>
         <!-- Winning Ratio -->
         <div class="win-ratio">
