--- a/src/pages/signup/step1/signup.html
+++ b/src/pages/signup/step1/signup.html
@@ -13,34 +13,30 @@
             <h1>Sign Up</h1>
         </div>
         <div class="form">
-            <ion-list class="list-form">
+            <ion-list class="list-form" [formGroup]="myForm">
                 <ion-item>
                     <ion-label stacked>Username</ion-label>
-                    <ion-input type="text"></ion-input>
+                    <ion-input type="text" formControlName="username"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label stacked>Password</ion-label>
-                    <ion-input type="password"></ion-input>
+                    <ion-input type="password" formControlName="password"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label stacked>Confirm Password</ion-label>
-                    <ion-input type="password"></ion-input>
+                    <ion-input type="password" formControlName="confirm"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label stacked>First Name</ion-label>
-                    <ion-input type="text"></ion-input>
-                </ion-item>
-                <ion-item>
-                    <ion-label stacked>Middle Name</ion-label>
-                    <ion-input type="text"></ion-input>
+                    <ion-input type="text" formControlName="firstname"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label stacked>Last Name</ion-label>
-                    <ion-input type="text"></ion-input>
+                    <ion-input type="text" formControlName="lastname"></ion-input>
                 </ion-item>
             </ion-list>
             <div class="btn-log">
-                <button ion-button>Next</button>
+                <button ion-button (click)="submitForm()">Submit</button>
             </div>
         </div>
     </div>
