--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the ListMatchPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
     <ion-navbar>
-        <ion-title>Matches</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title class="head-title">List Of Matches</ion-title>
     </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content padding class="home-content">
+    <h1>Next Match</h1>
 </ion-content>
