--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -8,5 +8,34 @@
 </ion-header>
 
 <ion-content padding class="home-content">
-    <h1>Next Match</h1>
+    <ion-card>
+        <ion-item class="team-side">
+            <div class="team">
+                <img src="./assets/images/int-flag/england.png" alt="">
+                <span class="vs">-</span>
+                <img src="./assets/images/int-flag/france.png" alt="">
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-icon name="football" item-start large></ion-icon>
+            <h2>Museum of Football</h2>
+            <p>11 N. Way St, Madison, WI 53703</p>
+        </ion-item>
+
+        <ion-item>
+            <ion-icon name="wine" item-left large></ion-icon>
+            <h2>Institute of Fine Cocktails</h2>
+            <p>14 S. Hop Avenue, Madison, WI 53703</p>
+        </ion-item>
+
+        <ion-item>
+            <span item-left>18 min</span>
+            <span item-left>(2.6 mi)</span>
+            <button ion-button icon-left clear item-end>
+              <ion-icon name="navigate"></ion-icon>
+              Start
+            </button>
+        </ion-item>
+
+    </ion-card>
 </ion-content>
