--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title class="head-title">List Of Matches</ion-title>
+        <ion-title class="head-title">Matches</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -17,25 +17,84 @@
             </div>
         </ion-item>
         <ion-item>
-            <ion-icon name="football" item-start large></ion-icon>
-            <h2>Museum of Football</h2>
-            <p>11 N. Way St, Madison, WI 53703</p>
+            <div class="stadium">
+                <img src="./assets/icon/stadium.png" alt="">
+                <h2>Nou Camp</h2>
+            </div>
         </ion-item>
-
         <ion-item>
-            <ion-icon name="wine" item-left large></ion-icon>
-            <h2>Institute of Fine Cocktails</h2>
-            <p>14 S. Hop Avenue, Madison, WI 53703</p>
-        </ion-item>
-
-        <ion-item>
-            <span item-left>18 min</span>
-            <span item-left>(2.6 mi)</span>
-            <button ion-button icon-left clear item-end>
-              <ion-icon name="navigate"></ion-icon>
-              Start
+            <ion-icon name="ios-calendar" item-left small></ion-icon>
+            <span item-left>06/12/2018 - 20:45 P.M</span>
+            <button ion-button icon-left clear item-end class="btn-bet">
+              <ion-icon name="logo-bitcoin"></ion-icon>
             </button>
         </ion-item>
-
     </ion-card>
+    <ion-card>
+        <ion-item class="team-side">
+            <div class="team">
+                <img src="./assets/images/int-flag/england.png" alt="">
+                <span class="vs">-</span>
+                <img src="./assets/images/int-flag/france.png" alt="">
+            </div>
+        </ion-item>
+        <ion-item>
+            <div class="stadium">
+                <img src="./assets/icon/stadium.png" alt="">
+                <h2>Nou Camp</h2>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-icon name="ios-calendar" item-left small></ion-icon>
+            <span item-left>06/12/2018 - 20:45 P.M</span>
+            <button ion-button icon-left clear item-end class="btn-bet">
+                  <ion-icon name="logo-bitcoin"></ion-icon>
+                </button>
+        </ion-item>
+    </ion-card>
+    <ion-card>
+        <ion-item class="team-side">
+            <div class="team">
+                <img src="./assets/images/int-flag/england.png" alt="">
+                <span class="vs">-</span>
+                <img src="./assets/images/int-flag/france.png" alt="">
+            </div>
+        </ion-item>
+        <ion-item>
+            <div class="stadium">
+                <img src="./assets/icon/stadium.png" alt="">
+                <h2>Nou Camp</h2>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-icon name="ios-calendar" item-left small></ion-icon>
+            <span item-left>06/12/2018 - 20:45 P.M</span>
+            <button ion-button icon-left clear item-end class="btn-bet">
+                      <ion-icon name="logo-bitcoin"></ion-icon>
+                    </button>
+        </ion-item>
+    </ion-card>
+    <ion-card>
+        <ion-item class="team-side">
+            <div class="team">
+                <img src="./assets/images/int-flag/england.png" alt="">
+                <span class="vs">-</span>
+                <img src="./assets/images/int-flag/france.png" alt="">
+            </div>
+        </ion-item>
+        <ion-item>
+            <div class="stadium">
+                <img src="./assets/icon/stadium.png" alt="">
+                <h2>Nou Camp</h2>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-icon name="ios-calendar" item-left small></ion-icon>
+            <span item-left>06/12/2018 - 20:45 P.M</span>
+            <button ion-button icon-left clear item-end class="btn-bet">
+                          <ion-icon name="logo-bitcoin"></ion-icon>
+                        </button>
+        </ion-item>
+    </ion-card>
+
 </ion-content>
