--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -12,89 +12,21 @@
         <ion-item class="team-side">
             <div class="team">
                 <img src="./assets/images/int-flag/england.png" alt="">
-                <span class="vs">-</span>
+                <button ion-button class="vs">Betting</button>
                 <img src="./assets/images/int-flag/france.png" alt="">
             </div>
         </ion-item>
-        <ion-item>
+        <ion-item class="bot-side">
             <div class="stadium">
                 <img src="./assets/icon/stadium.png" alt="">
                 <h2>Nou Camp</h2>
             </div>
         </ion-item>
-        <ion-item>
-            <ion-icon name="ios-calendar" item-left small></ion-icon>
-            <span item-left>06/12/2018 - 20:45 P.M</span>
-            <button ion-button icon-left clear item-end class="btn-bet">
-              <ion-icon name="logo-bitcoin"></ion-icon>
-            </button>
+        <ion-item class="bot-side">
+            <div class="calendar">
+                <img src="./assets/icon/calendar.png" alt="">
+                <h2>06/12/2018 - 20:45 P.M</h2>
+            </div>
         </ion-item>
     </ion-card>
-    <ion-card>
-        <ion-item class="team-side">
-            <div class="team">
-                <img src="./assets/images/int-flag/england.png" alt="">
-                <span class="vs">-</span>
-                <img src="./assets/images/int-flag/france.png" alt="">
-            </div>
-        </ion-item>
-        <ion-item>
-            <div class="stadium">
-                <img src="./assets/icon/stadium.png" alt="">
-                <h2>Nou Camp</h2>
-            </div>
-        </ion-item>
-        <ion-item>
-            <ion-icon name="ios-calendar" item-left small></ion-icon>
-            <span item-left>06/12/2018 - 20:45 P.M</span>
-            <button ion-button icon-left clear item-end class="btn-bet">
-                  <ion-icon name="logo-bitcoin"></ion-icon>
-                </button>
-        </ion-item>
-    </ion-card>
-    <ion-card>
-        <ion-item class="team-side">
-            <div class="team">
-                <img src="./assets/images/int-flag/england.png" alt="">
-                <span class="vs">-</span>
-                <img src="./assets/images/int-flag/france.png" alt="">
-            </div>
-        </ion-item>
-        <ion-item>
-            <div class="stadium">
-                <img src="./assets/icon/stadium.png" alt="">
-                <h2>Nou Camp</h2>
-            </div>
-        </ion-item>
-        <ion-item>
-            <ion-icon name="ios-calendar" item-left small></ion-icon>
-            <span item-left>06/12/2018 - 20:45 P.M</span>
-            <button ion-button icon-left clear item-end class="btn-bet">
-                      <ion-icon name="logo-bitcoin"></ion-icon>
-                    </button>
-        </ion-item>
-    </ion-card>
-    <ion-card>
-        <ion-item class="team-side">
-            <div class="team">
-                <img src="./assets/images/int-flag/england.png" alt="">
-                <span class="vs">-</span>
-                <img src="./assets/images/int-flag/france.png" alt="">
-            </div>
-        </ion-item>
-        <ion-item>
-            <div class="stadium">
-                <img src="./assets/icon/stadium.png" alt="">
-                <h2>Nou Camp</h2>
-            </div>
-        </ion-item>
-        <ion-item>
-            <ion-icon name="ios-calendar" item-left small></ion-icon>
-            <span item-left>06/12/2018 - 20:45 P.M</span>
-            <button ion-button icon-left clear item-end class="btn-bet">
-                          <ion-icon name="logo-bitcoin"></ion-icon>
-                        </button>
-        </ion-item>
-    </ion-card>
-
 </ion-content>
