--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -12,7 +12,7 @@
         <ion-item class="team-side">
             <div class="team">
                 <img src="./assets/images/int-flag/england.png" alt="">
-                <button ion-button class="vs">Betting</button>
+                <button ion-button class="vs" (click)="goBet()">Betting</button>
                 <img src="./assets/images/int-flag/france.png" alt="">
             </div>
         </ion-item>
