--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,25 +8,11 @@
 </ion-header>
 
 <ion-content padding class="home-content">
-    <h1>Next Match</h1>
-    <h5>01/01/2018 - 19:30 P.M</h5>
-    <div class="list-match">
-        <div class="team">
-            <img src="./assets/images/int-flag/england.png" alt="">
-            <span class="vs">vs</span>
-            <img src="./assets/images/int-flag/france.png" alt="">
-        </div>
-        <div class="short-inf">
-            <span>Stadium: </span>
-            <span>Nou Camp</span>
-        </div>
+    <div class="logo-side">
+        <img src="./assets/images/icons/draw.png" alt="">
     </div>
-    <!-- <div *ngFor="let item of items">
-        <span style="color: white;">{{item.name}}</span>
-    </div> -->
-
-    <div class="button-bet" (click)="goToLogin()">
-        <div><img src="./assets/images/icons/chips.png" alt=""></div>
+    <div class="button-bet">
+        <div><img (click)="goToLogin()" src="./assets/images/icons/chips.png" alt=""></div>
         <div class="text-bet">BET NOW</div>
     </div>
 
