--- a/src/pages/bet/bet.html
+++ b/src/pages/bet/bet.html
@@ -15,7 +15,7 @@
 </ion-header>
 <ion-content padding class="home-content">
     <div class="type1">
-        <h2>Original</h2>
+        <h2>Full-time</h2>
         <div class="origin-side">
             <div>
                 <h5>Home</h5>
