--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title class="head-title">Matches</ion-title>
+        <ion-title class="head-title">Active Bet</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -15,18 +15,13 @@
                 <button ion-button class="vs" (click)="goBet(match)">Betting</button>
                 <img [src]="match.teamAway.picture" alt="">
             </div>
+            <div class="schedule">{{ match.date| date:'dd/MM/yyyy'}} - {{match.date| date:'HH:mm a'}}</div>
         </ion-item>
-        <ion-item class="bot-side">
-            <div class="stadium">
-                <img src="./assets/icon/stadium.png" alt="">
-                <h2>{{ match.stadium }}</h2>
-            </div>
-        </ion-item>
-        <ion-item class="bot-side">
+        <!-- <ion-item class="bot-side">
             <div class="calendar">
                 <img src="./assets/icon/calendar.png" alt="">
-                <h2>{{ match.date| date:'dd/MM/yyyy'}} - {{match.date| date:'HH:mm a'}}</h2>
+                <h2></h2>
             </div>
-        </ion-item>
+        </ion-item> -->
     </ion-card>
 </ion-content>
