--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
+            Sign In
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -15,12 +16,10 @@
         <div class="form">
             <ion-list class="list-form">
                 <ion-item>
-                    <ion-label class="label" fixed>Username:</ion-label>
-                    <ion-input placeholder="Your Username" type="text" maxlength="25" [(ngModel)]="username"></ion-input>
+                    <ion-input placeholder="E-mail" type="text" maxlength="25" [(ngModel)]="username"></ion-input>
                 </ion-item>
                 <ion-item>
-                    <ion-label fixed>Password:</ion-label>
-                    <ion-input placeholder="Your Password" type="password" maxlength="16" [(ngModel)]="password"></ion-input>
+                    <ion-input placeholder="Password" type="password" maxlength="16" [(ngModel)]="password"></ion-input>
                 </ion-item>
             </ion-list>
             <div class="btn-log">
