--- a/src/pages/signup/step1/signup.html
+++ b/src/pages/signup/step1/signup.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            Registration
+            Create Account
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -25,7 +25,8 @@
                 <ion-input type="text" maxlength="50" formControlName="lastname" placeholder="Your Last Name"></ion-input>
             </ion-item>
             <ion-item>
-                <ion-select placeholder="Gender" formControlName="gender">
+                <ion-label>Gender</ion-label>
+                <ion-select placeholder="Gender" okText="Apply" formControlName="gender">
                     <ion-option value="M">Male</ion-option>
                     <ion-option value="F">Female</ion-option>
                 </ion-select>
