--- a/src/pages/signup/step1/signup.html
+++ b/src/pages/signup/step1/signup.html
@@ -25,7 +25,7 @@
                 <ion-input type="text" maxlength="50" formControlName="lastname" placeholder="Your Last Name"></ion-input>
             </ion-item>
             <ion-item>
-                <ion-label>Gender</ion-label>
+                <ion-label class="label-gen">Gender</ion-label>
                 <ion-select placeholder="Gender" okText="Apply" formControlName="gender">
                     <ion-option value="M">Male</ion-option>
                     <ion-option value="F">Female</ion-option>
