--- a/src/pages/ranking/ranking.html
+++ b/src/pages/ranking/ranking.html
@@ -11,8 +11,8 @@
     <div class="logo-rank">
         <img src="./assets/icon/cup-rank.png" alt="">
     </div>
-
-    <ion-list>
+    <h1>Where is your position?</h1>
+    <ion-list class="list-rank">
         <ion-item>
             <ion-avatar item-start>
                 <img src="./assets/icon/boy.png">
@@ -30,9 +30,9 @@
             </ion-avatar>
             <div class="info-side">
                 <div>
-                    <h2>Anna Marrett</h2>
+                    <h2>John Doe</h2>
                 </div>
-                <div class="point-side">40000</div>
+                <div class="point-side">50000</div>
             </div>
         </ion-item>
         <ion-item>
@@ -41,32 +41,40 @@
             </ion-avatar>
             <div class="info-side">
                 <div>
-                    <h2>Anna Pallesta Francisco</h2>
+                    <h2>John Doe</h2>
                 </div>
-                <div class="point-side">30000</div>
+                <div class="point-side">50000</div>
             </div>
         </ion-item>
         <ion-item>
             <ion-avatar item-start>
-                <img src="./assets/icon/girl.png">
+                <img src="./assets/icon/boy.png">
             </ion-avatar>
             <div class="info-side">
                 <div>
-                    <h2>Anna Pallesta Francisco</h2>
+                    <h2>John Doe</h2>
                 </div>
-                <div class="point-side">30000</div>
+                <div class="point-side">50000</div>
             </div>
         </ion-item>
         <ion-item>
             <ion-avatar item-start>
-                <img src="./assets/icon/girl.png">
+                <img src="./assets/icon/boy.png">
             </ion-avatar>
             <div class="info-side">
                 <div>
-                    <h2>Anna Pallesta Francisco</h2>
+                    <h2>John Doe</h2>
                 </div>
-                <div class="point-side">30000</div>
+                <div class="point-side">50000</div>
             </div>
         </ion-item>
     </ion-list>
 </ion-content>
+<ion-footer class="footer-rank">
+    <ion-toolbar>
+        <ion-title>
+            <div>Your Rank: 127</div>
+            <div>10000</div>
+        </ion-title>
+    </ion-toolbar>
+</ion-footer>
