--- a/src/pages/list-match/list-match.html
+++ b/src/pages/list-match/list-match.html
@@ -7,21 +7,28 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding class="home-content">
-    <ion-card [hidden]="!match.isActive" *ngFor="let match of listMatches">
-        <ion-item class="team-side">
-            <div class="team">
-                <img [src]="match.teamHome.picture" alt="">
-                <button ion-button class="vs" (click)="goBet(match)">Betting</button>
-                <img [src]="match.teamAway.picture" alt="">
-            </div>
-            <div class="schedule">{{ match.date| date:'dd/MM/yyyy'}} - {{match.date| date:'HH:mm a'}}</div>
+<ion-content class="home-content">
+    <ion-item-group class="group-item" *ngFor="let match of grouplistMatches">
+        <ion-item-divider color="light" class="date-start">{{ match.date | date:'dd/MM/yyyy'}}</ion-item-divider>
+        <ion-item *ngFor="let item of match.data" (click)="goBet(item)">
+            <div class="time">{{item.date| date:'HH:mm'}}</div>
+            <ion-row class="team-vs">
+                <ion-col class="col-name">
+                    <div>{{item.teamHome.teamName}}</div>
+                </ion-col>
+                <ion-col>
+                    <div class="logo"><img [src]="item.teamHome.picture" alt=""></div>
+                </ion-col>
+                <ion-col>
+                    <div>-</div>
+                </ion-col>
+                <ion-col>
+                    <div class="logo"><img [src]="item.teamAway.picture" alt=""></div>
+                </ion-col>
+                <ion-col class="col-name">
+                    <div>{{item.teamAway.teamName}}</div>
+                </ion-col>
+            </ion-row>
         </ion-item>
-        <!-- <ion-item class="bot-side">
-            <div class="calendar">
-                <img src="./assets/icon/calendar.png" alt="">
-                <h2></h2>
-            </div>
-        </ion-item> -->
-    </ion-card>
+    </ion-item-group>
 </ion-content>
